@@ -19,6 +19,7 @@ import java.security.KeyStore;
 import java.security.cert.Certificate;
 import java.security.cert.CertificateFactory;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -111,7 +112,7 @@ public class ClusterTlsCertificateTest {
         NodeAddress ipv4Node =
                 NodeAddress.builder().host("127.0.0.1").port(clusterNodes.get(0).getPort()).build();
         GlideClusterClientConfiguration config =
-                TestUtilities.createClusterConfigWithRootCert(caCert, List.of(ipv4Node));
+                TestUtilities.createClusterConfigWithRootCert(caCert, Collections.singletonList(ipv4Node));
 
         try (GlideClusterClient client = GlideClusterClient.createClient(config).get()) {
             TestUtilities.assertConnected(client);
@@ -123,7 +124,7 @@ public class ClusterTlsCertificateTest {
         NodeAddress ipv6Node =
                 NodeAddress.builder().host("::1").port(clusterNodes.get(0).getPort()).build();
         GlideClusterClientConfiguration config =
-                TestUtilities.createClusterConfigWithRootCert(caCert, List.of(ipv6Node));
+                TestUtilities.createClusterConfigWithRootCert(caCert, Collections.singletonList(ipv6Node));
 
         try (GlideClusterClient client = GlideClusterClient.createClient(config).get()) {
             TestUtilities.assertConnected(client);
